2.1.12
 * Remove superfluous COUNTER_MUTATION stage mapping (CASSANDRA-10605)
 * Improve json2sstable error reporting on nonexistent columns (CASSANDRA-10401)
 * (cqlsh) fix COPY using wrong variable name for time_format (CASSANDRA-10633)
 * Do not run SizeEstimatesRecorder if a node is not a member of the ring (CASSANDRA-9912)
 * Improve handling of dead nodes in gossip (CASSANDRA-10298)
 * Fix logback-tools.xml incorrectly configured for outputing to System.err
   (CASSANDRA-9937)
 * Fix streaming to catch exception so retry not fail (CASSANDRA-10557)
 * Add validation method to PerRowSecondaryIndex (CASSANDRA-10092)
 * Support encrypted and plain traffic on the same port (CASSANDRA-10559)
 * Do STCS in DTCS windows (CASSANDRA-10276)
 * Don't try to get ancestors from half-renamed sstables (CASSANDRA-10501)
 * Avoid repetition of JVM_OPTS in debian package (CASSANDRA-10251)
 * Fix potential NPE from handling result of SIM.highestSelectivityIndex (CASSANDRA-10550)
 * Fix paging issues with partitions containing only static columns data
   (CASSANDRA-10381)
 * Fix conditions on static columns (CASSANDRA-10264)
 * AssertionError: attempted to delete non-existing file CommitLog (CASSANDRA-10377)
 * Merge range tombstones during compaction (CASSANDRA-7953)
 * (cqlsh) Distinguish negative and positive infinity in output (CASSANDRA-10523)
 * (cqlsh) allow custom time_format for COPY TO (CASSANDRA-8970)
 * Don't allow startup if the node's rack has changed (CASSANDRA-10242)
 * Fix sorting for queries with an IN condition on partition key columns (CASSANDRA-10363)


2.1.11
 * Fix mmap file segment seeking to EOF (CASSANDRA-10478)
 * Allow LOCAL_JMX to be easily overridden (CASSANDRA-10275)
 * Mark nodes as dead even if they've already left (CASSANDRA-10205)
 * Update internal python driver used by cqlsh (CASSANDRA-10161, CASSANDRA-10507)

2.1.10
 * Bulk Loader API could not tolerate even node failure (CASSANDRA-10347)